2022-03-02  Antoine Quint  <graouts@webkit.org>

        [web-animations] keyframe values set to "inherit" should recompute their values when the inherited value changes
        https://bugs.webkit.org/show_bug.cgi?id=237371

        Reviewed by Antti Koivisto.

        We now keep track of properties set to "inherit" in keyframes such that we may determine when the
        computed value may have changed when resolving animations.

        * animation/KeyframeEffect.cpp:
        (WebCore::KeyframeEffect::processKeyframes):
        * animation/KeyframeEffect.h:
        (WebCore::KeyframeEffect::inheritedProperties const):
        * animation/KeyframeEffectStack.cpp:
        (WebCore::KeyframeEffectStack::applyKeyframeEffects):

2022-03-04  Sihui Liu  <sihui_liu@apple.com>

        SQLiteDatabase::open should return early if journal mode cannot be set
        https://bugs.webkit.org/show_bug.cgi?id=237130
        <rdar://83130954>

        Reviewed by Darin Adler.

        Add early return in SQLiteDatabase::open if key operation fails; also make sure error is properly set and 
        database is closed in the case.

        * platform/sql/SQLiteDatabase.cpp:
        (WebCore::SQLiteDatabase::open):
        (WebCore::SQLiteDatabase::useWALJournalMode):
        (WebCore::SQLiteDatabase::close):
        * platform/sql/SQLiteDatabase.h:

2022-03-04  Youenn Fablet  <youenn@apple.com>

        webrtc/canvas-to-peer-connection.html is flakily failing a test assertion
        https://bugs.webkit.org/show_bug.cgi?id=237423

        Reviewed by Eric Carlson.

        Make sure the rotation session size is matching the buffer size.
        Covered by updated test.

        * platform/graphics/cocoa/GraphicsContextGLCocoa.h:
        * platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
        (WebCore::GraphicsContextGLCocoa::paintCompositedResultsToMediaSample):

2022-03-04  Youenn Fablet  <youenn@apple.com>

        AVVideoCaptureSource should reuse CaptureDevice label